--- a/TestReport.html
+++ b/TestReport.html
@@ -41,7 +41,7 @@
 		<!-- nav-right -->
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<a href='#!'>
-				<span class='label suite-start-time'>Sep 4, 2017 5:00:12 PM</span>
+				<span class='label suite-start-time'>Sep 5, 2017 9:19:21 AM</span>
 			</a>
 			<a href='#!'>
 				<span class='label'>v3.0.3</span>
@@ -149,14 +149,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
 						<span class='test-name'>myTest</span>
-						<span class='test-time'>Sep 4, 2017 5:00:15 PM</span>
+						<span class='test-time'>Sep 5, 2017 9:19:24 AM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Sep 4, 2017 5:00:15 PM</span>
-	<span class='label end-time'>Sep 4, 2017 5:00:16 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 1s+135ms</span>
+	<span class='label start-time'>Sep 5, 2017 9:19:24 AM</span>
+	<span class='label end-time'>Sep 5, 2017 9:19:25 AM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 1s+118ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -170,12 +170,12 @@
 			<tbody>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>5:00:16 PM</td>
+					<td class='timestamp'>9:19:25 AM</td>
 					<td class='step-details'>Successfully logged in</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>5:00:16 PM</td>
+					<td class='timestamp'>9:19:25 AM</td>
 					<td class='step-details'>Passed</td>
 				</tr>
 			</tbody>
@@ -227,19 +227,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Sep 4, 2017 5:00:12 PM</div>
+					<div class='panel-lead'>Sep 5, 2017 9:19:21 AM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Sep 4, 2017 5:00:17 PM</div>
+			 		<div class='panel-lead'>Sep 5, 2017 9:19:25 AM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>4,465ms</div>
+					<div class='panel-lead'>4,555ms</div>
 				</div>
 			</div>
 		</div>
